# photography-home

./: .env.example  .gitignore  .markdownlint.json  .markdownlintrc.json  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  .sesskey  README.md  UNSPLASH_COMPLIANCE.md  config.py  keystatic.config.ts  main.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  setup-precommit.sh  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
.github/workflows/: dev.yaml  etl.yaml
backend/: README.md  __init__.py  database.py  db_service.py  etl.py
backend/providers/: base.py  unsplash.py
components/: __init__.py  layout.py
components/pages/: __init__.py  about.py  blog.py  collection_detail.py  collections.py  gallery.py  home.py  insights.py
components/ui/: __init__.py  analytics.py  badges.py  collection.py  filters.py  footer.py  gallery.py  head.py  header.py  lightbox.py  photo_card.py  photo_grid.py  search_bar.py
content/articles/: home-server-part-1-foundation.mdoc  home-server-part-2-media-center.mdoc  home-server-part-3-vpn-split-tunneling.mdoc  home-server-part-4-secure-tunnel.mdoc
content/blog/home-server/: bonus-troubleshooting.md  part-1-foundation.md  part-2-media-center.md  part-2-media-empire.md  part-3-vpn-split-tunneling.md  (+2 more)
content/hobbies/: music.yaml  photography.yaml  running.yaml
content/pages/: README.md  about.md
content/projects/: raspberry-pi.mdoc
data/: README.md  photos.db
routes/: __init__.py  api.py  pages.py
services/: __init__.py  cloudinary.py  compliance.py  insights.py  markdown.py  photo_details.py  slug.py  unsplash.py
src/: middleware.ts
src/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: article-body.tsx  footer.tsx  header.tsx  person-jsonld.tsx
src/lib/: articles.ts  blur-hash.ts  hobbies.ts  pages.ts  photos.ts  projects.ts  site-config.ts
static/: lightbox.js  robots.txt  styles.css
static/css/: animations.css  base.css  components.css  gallery.css  layout.css  lightbox.css  markdown.css  responsive.css  styles.css
static/js/: animations.js  carousel.js  dev-mode.js  infinite-scroll.js  keyboard-navigation.js  lightbox.js  search-filter.js  search-handler.js  sticky-header.js  swipe.js  theme-toggle.js
tests/: test_database.py  test_db_service.py  test_etl_transform.py  test_unsplash_api.py
tests/e2e/: hobbies.spec.ts  photography.spec.ts  seo.spec.ts  writing.spec.ts
tests/fixtures/: photo_ON9hQ_02Cn4.json  photo_with_exif.json
tests/local_tests/: test_unsplash_api.py
tests/unit_tests/: test_collections_persistence.py  test_database.py  test_db_service.py  test_db_service_ui_retrieval.py  test_etl_to_db.py  test_etl_transform.py
(+24 files in other folders)
